# NetHack-CN-Mod

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: snapshot-release.yml
docs/: README_zh.md
include/: resource.h  zh_mod.h
locales/: zh-CN.json
resources/: winmm_zh_proxy.def  winmm_zh_proxy.rc
scripts/: extract_all_strings.py  extract_c_string_diff.py  stdin_pairs_to_json.py
src/: winmm_proxy_main.c  zh_dump.c  zh_hooks.c  zh_translate.c  zh_vpline.c
